<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="com.example.android.battleofbows.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            style="@style/Reset"
            android:onClick="resetScore"
            android:text="@string/reset" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:background="@color/colorLightBlue"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editText1"
                    style="@style/TextView1"
                    android:hint="@string/Player1"
                    android:inputType="textMultiLine" />

                <ImageView
                    style="@style/ImageView"
                    android:src="@drawable/target2" />

                <EditText
                    android:id="@+id/editText2"
                    style="@style/TextView1"
                    android:hint="@string/Player2"
                    android:inputType="textMultiLine" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="5"
                android:background="@color/colorLightBlue"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/archer_score"
                        style="@style/TextView2"
                        android:text="0" />

                    <Button
                        style="@style/Button"
                        android:onClick="addTenForArcher"
                        android:text="@string/s10" />

                    <Button
                        style="@style/Button"
                        android:onClick="addNineForArcher"
                        android:text="@string/s9" />

                    <Button
                        style="@style/Button"
                        android:onClick="addSevenForArcher"
                        android:text="@string/s7" />

                    <Button
                        style="@style/Button"
                        android:onClick="addFiveForArcher"
                        android:text="@string/s5" />

                    <Button
                        style="@style/Button"
                        android:onClick="addThreeForArcher"
                        android:text="@string/s3" />

                    <Button
                        style="@style/Button"
                        android:onClick="addOneForArcher"
                        android:text="@string/s1" />

                </LinearLayout>

                <View style="@style/View" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/bowman_score"
                        style="@style/TextView2"
                        android:text="0" />

                    <Button
                        style="@style/Button"
                        android:onClick="addTenForBowman"
                        android:text="@string/s10" />

                    <Button
                        style="@style/Button"
                        android:onClick="addNineForBowman"
                        android:text="@string/s9" />

                    <Button
                        style="@style/Button"
                        android:onClick="addSevenForBowman"
                        android:text="@string/s7" />

                    <Button
                        style="@style/Button"
                        android:onClick="addFiveForBowman"
                        android:text="@string/s5" />

                    <Button
                        style="@style/Button"
                        android:onClick="addThreeForBowman"
                        android:text="@string/s3" />

                    <Button
                        style="@style/Button"
                        android:onClick="addOneForBowman"
                        android:text="@string/s1" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>

</ScrollView>